--- a/study-plan.Rmd
+++ b/study-plan.Rmd
@@ -138,7 +138,7 @@ Results
 ========
 The TITCO cohort included `r results$n.cohort` patients (Figure 1). We excluded `r results$n.younger.than.18` patients because they were under the age of 18  and `r  results$n.incl2 ` patients because they died between arrival and admission. We further excluded  `r results$n.NA_TOT` patients due to missing data in either admission to the ICU (`r results$n.NA_ICU`), systolic blood pressure  (`r results$n.NA_SBP`), respiratory rate (`r results$n.NA_RR`), or GCS (`r results$n.NA_GCS`). The final sample included `r results$n.complete` patients. 
 
-<!-- Revise the rest of this paragraph based on my first couple of examples -->
+<!-- Revise the rest of this paragraph based on my first couple of examples --> <!-- i did not understand this syntax so I'm gonna have to take this another day... -->
 The median age was `r tabOne$ContTable$Overall["Age","mean"]` with predominantly `r tolower(most.common.sex)` participants (`r p.sex`%). The most common type of injury was `r tolower(most.common.mechanism)`s with `r p.mechanism`% followed by `r tolower(second.most.common.mechanism)`s and `r tolower(third.most.common.mechanism)` accouting for ```r tabOne$CatTable$Overall$`Mode of injury`["3","percent"] ```% and  ```r tabOne$CatTable$Overall$`Mode of injury`["1","percent"] ```% respectively. Furthermore `r  tabOne$CatTable$Overall$Transported["2","percent"]`% of patients were transported to a participating hospital from another health care facility. Overall in the study population ```r tabOne$CatTable$Overall$`Admitted to the ICU`["2","percent"] ```% of patients had to be treated for some time in the ICU. The data is presented in \@ref(tab:table1) with corresponding standard deviations. 
 
 ```{r figure1, fig.align = 'center', out.width = "100%", fig.cap = "Flowchart of exclussion from the study", echo = FALSE}
@@ -149,10 +149,11 @@ knitr::include_graphics("figure1.svg")
 ```
 
 
-Using the training sample the optimal cutoffs of the logistic regressions for each parameter was found maximizing the youden index. The optimal cutoffs where calculated to be `r boot.cis$cut.sbp[["pe"]]`, `r boot.cis$cut.rr[["pe"]]` and `r boot.cis$cut.gcs[["pe"]]` for SPB, RR and GCS respectively and the corresponding confidence intervals can be seen in table 2. <!-- This paragraph is unnecessarily long. The first sentence can be removed. The second can be revised to start with: We identified the following revised optimal cutoffs:... or something similar --> 
+We identified the following revised optimal cutoffs: `r boot.cis$cut.sbp[["pe"]]` for SBP, `r boot.cis$cut.rr[["pe"]]` for RR and `r boot.cis$cut.gcs[["pe"]]` for GCS and the corresponding confidence intervals can be seen in table 2.
 
-<!-- Okay, so you're repeating quite a bit of the methods in the results. I don't think that's necessary. Instead I suggest you focus on presenting the results (i.e. the numbers that you find) and introducing/summarizing tables and figures -->
-Then using the validation sample, new coefficients and odds ratios (OR) were estimated for the updated model using the cutoffs given in the training sample from each bootstrap. The odds ratios can be seen in table 2. 
+<!-- Okay, so you're repeating quite a bit of the methods in the results. I don't think that's necessary. Instead I suggest you focus on presenting the results (i.e. the numbers that you find) and introducing/summarizing tables and figures --> <!-- Well yes i can see that havnt had the time to rewrite it this week but ill fix it. -->
+
+The updated odds ratios can  can be seen in table 2. 
 
 Furthermore the new coefficents and the original coefficents were used to create odds ratios for the original and uppdated qSOFA scores using the distribution in the validation sample and yielded the results given in table 3 and 4 
 
@@ -195,18 +196,28 @@ Discussion
 ========
 
 <!-- aim and how it went, --->
-The aim of this study was to asses the validity of the qSOFA score in predicting ICU admissions in trauma patients. In the context of urban Indian hospitals the original qSOFA score with its original cutoffs and coefficients did not accurately predict ICU admission. The model underestimated the rate<!-- Why do you focus on the rate here? The rate is not included in the aim or methods, so I suggest that you stick to just "ICU admission" or "probability of ICU admission" -->for scores of 0-2 and overestimated the rate for patients with a score of 3 as can be seen in _FIGURE showing ICI plots_. When updating the model adjusting the cutoffs and coefficients the new model performs significantly better and as well as to be expected using a single database<!-- The meaning of this last part of the sentence (start with "as well as to") is unlclear to me. I suggest you remove or revise to clarify-->. 
+The aim of this study was to asses the validity of the qSOFA score in predicting ICU admissions in trauma patients. In the context of urban Indian hospitals the original qSOFA score with its original cutoffs and coefficients did not accurately predict ICU admission. The model underestimated the probability of ICU admission for scores of 0-2 and overestimated the probability for patients with a score of 3 as can be seen in _FIGURE showing ICI plots_. When updating the model adjusting the cutoffs and coefficients the new model performs significantly better.
+
 
 <!-- usage and implication -->
-The estimated probabilities <!-- Note that you use probability here rather than rate-->ranges from `r boot.cis$est.prob.sum.new.none[["pe"]]` to `r boot.cis$est.prob.sum.new.three[["pe"]]`. 
-Where the highest value can be said to be a clear overestimation not accounting for a large portion of patients<!-- Clarify what model you are referring to here-->. A more realistic span is that off 0-2 points, or a probability of `r boot.cis$est.prob.sum.new.none[["pe"]]` to `r boot.cis$est.prob.sum.new.two[["pe"]]`. Because of this narrow span and high baseline risk the model would not be of clinical use as a stand alone metric deciding or predicting ICU admissions but rather as a tool indicating which patients are slightly more or less likely to need it<!-- This last sentence is a bit long. Try to divide into two or three to clarify what you mean-->.
+The estimated probabilities for the new model ranges from `r boot.cis$est.prob.sum.new.none[["pe"]]` to `r boot.cis$est.prob.sum.new.three[["pe"]]` where the highest value, corresponding to a score of three, can be said to be a clear overestimation and not accounting for a large portion of patients. A more realistic span is that off 0-2 points, or a probability of `r boot.cis$est.prob.sum.new.none[["pe"]]` to `r boot.cis$est.prob.sum.new.two[["pe"]]`. The updated model can not in itself be used to exclude patients with a low score from the need for intensive care nor can it with certainty predict that patients with a high score will be admitted to the ICU. Contrast this to the original use of the qSOFA score where a score of 0 correspond to a mortality of 2-3  <!-- approx taken from figure --> percent and a score of 2-3 correspond to a mortality of 7-20%<!-- taken from figure ish-->. This makes the original qSOFA in the context of screening for severe infections a good tool to sort patients with a low score to also be of a low risk of dying. 
 
-It can also be noted that neither SBP nor RR is significantly associated with a higher risk of ICU admisson. Only GCS is significantly associated with ICU admission. This can be partially explained by the fact that a new cutoff where calculated for each bootstrap resulting in different cutoffs used and therefore resulting in an increased uncertainty. The data seem to suggest a correlation between ICU admission and RR and SBP and therefore use it in a scoring model, although this study could not give a statistically significant result the those regards. It could also be that the different parameters interacted with each other either enhancing or decreasing the effect and risk of ICU admission when present at the same time wich was not taken into consideration in this model where the different parameters where presumed to be independent of each other.<!-- You tend to write quite long sentences with several key points. Try to look at each sentence and make sure you only have one key point per sentence. Also, try to cut away extra words. "The fact that" can almost always be replace by just "that" and "seems to <verb>" can be just <verb>-->
+<!-- It can also be noted that out of the three parameters used in the updated model only GCS was significantly associated with a higher risk of ICU admission. This can be partially explained by that new cutoffs where calculated for each bootstrap resulting in different cutoffs being evaluated resulting in an increased uncertainty. It could also be that RR and SBP does not have a significant correlation to ICU admission. Although the data suggest that there is a correlation and therefore a possibility of using it in the formation of a predictive model the result is not significant. --> <!-- körde om bootstrapen igen och då fick jag ett annat resultat så stryker denna för nu... -->
 
 <!--limitations --->
-Because of the composition of the TITCO database the results are likely to be generalizable to other urban hospitals of similar economic and resource setting<!-- Why do you think that?-->. It is not clear whether the results can be used in rural settings or setting with higher or lower resource settings. It should also be noted that _percent Transported ish 60_ of the patients where for an unspecified time first treated at another hospital and then later transferred to one of the participating hospitals. Because of this the parameters used in this study only shows the first ones taken at arrival to the participating hospital and not always the first ones taken after the injury and does not take into account any interventions performed before arrival<!-- Or between arrival and admission to the ICU-->.
 
-Furthermore out of the `r results$n.adults` patients above the age of 18 only `r results$n.complete` had complete data, or `r results$n.complete/results$n.adults`%. With this amount of missing data it is unclear if the data can be said to be missing completely at random or if there are any underlying factors contributing to the missing of data that could skew the results leading to a higher uncertainty regardless of bootstraping<!-- Does the amount of missing data really say anything about the pattern of missing data?-->.
+Because of the composition and context of the TITCO database the results are likely to be generalizable in similar settings, that is to other urban hospitals of similar economic and resource setting<!-- Why do you think that?-->. It is not clear whether the results can be used in rural settings or setting with higher or lower resource settings. It should also be noted that _percent Transported ish 60_ of the patients where for an unspecified time first treated at another hospital and then later transferred to one of the participating hospitals. Because of this the parameters used in this study only shows the first ones taken at arrival to the participating hospital and not always the first ones taken after the injury and does not take into account any interventions performed before arrival or between arrival and admission to the ICU.
+
+Furthermore out of the `r results$n.adults` patients above the age of 18 only `r results$n.complete` had complete data, or `r results$n.complete/results$n.adults`%. With this amount of missing data it is unclear if the data can be said to be missing completely at random or if there are any underlying factors contributing to the missing of data that could skew the results leading to a higher uncertainty regardless of bootstraping<!-- Does the amount of missing data really say anything about the pattern of missing data?--> <!-- No.... but i still want to add something about the ammount of missing data but not sure how... --> .
+
+[@Miyamoto2020] Comparing this to the results by Miyamoto on trauma patients in Japan where they looked at the qSOFA scores predictive power on mortality they showed that in their sample an elevated qSOFA score of 2-3 upon arrival to the hospital had an odds ratio compared with that of a score of 0 of 2.92-4.84 depending on the prehospital score. They also calculated that in their sample qSOFA had an AUC of 0.69-0.76.
+
+In its original context the qSOFA model had an AUC for mortality of 0.66 for patients treated at the ICU and 0.81 for patients without ICU encounters. The original OR for the parameters can be seen in table 2. (orginalkällan)
+
+Although these studies looked at mortality and not ICU admission one can see that both the mentioned studies had a comparable but slightly higher AUC and a higher OR than can be shown in this study. This is to be somewhat expected since it can be argued that although there is a connection between ICU admission and mortality through severity of that patients condition there were patients who died without being treated in the ICU. The reason for this is not certain but one can argue that this is because the patients condition was such that the patients either died before they could be admitted to the ICU or the doctors decided that intensive care would not be of benefit for the patient, or due to a lack or ICU beds such that patients had to be prioritized for intensive care and not all patients who would have benefited from it got admitted to the ICU. The number of ICU beds per 100 000 people is 2.3 in India compared with for example 7.3 in Japan. (Källa)
+
+
+
 
 ## Questions:
 
